fix misreferenced table and supplement fig prefixs

--- a/manuscript/manuscript.Rmd
+++ b/manuscript/manuscript.Rmd
@@ -149,7 +149,7 @@ We addressed the knowledge gaps described above by asking two questions using da
 
 We analyzed data on lake total nitrogen (TN) and total phosphorus (TP) concentrations from the LAGOS-NE data product \citep{soranno2017lagos}. The LAGOS-NE nutrient data are limited to surface (or “epilimnetic”) samples and were derived from federal, state, tribal, and non-profit agencies, as well as university researchers and citizen scientist data collections \citep{sorannoLAGOSNEMultiscaledGeospatial2017}. We collapsed lake nutrient data to long-term median values computed using all data from the summer stratified period (i.e. 15 June through 15 September) available for each lake between 2000 and 2010. For the lakes that met our selection criteria (see below) the median number of samples per lake was nine (range = 3-94) and the median number of years sampled was four (range = 2-10).
 
-Our first source for granular agricultural information was the 2010 Cropland Data Layer (CDL, \citealt{usda-nassNationalAgriculturalStatistics2019}), which we used to generate lake watershed and stream buffer estimates of the proportion of land cover due to specific crops such as corn and soybeans. We used the R package `cdlTools` to access CDL products \citep{chenToolsDownloadWork2018}. We used the 2010 CDL data because this was the first year of high resolution (30 x 30m) CDL data collection that matched our lake nutrient data collection window. Because the CDL contains detailed coverage for dozens of crops, including rare crops with little to no coverage, we re-categorized CDL data based on \citet{larkCroplandExpansionOutpaces2015} to a more limited set of categories (Table A1). 
+Our first source for granular agricultural information was the 2010 Cropland Data Layer (CDL, \citealt{usda-nassNationalAgriculturalStatistics2019}), which we used to generate lake watershed and stream buffer estimates of the proportion of land cover due to specific crops such as corn and soybeans. We used the R package `cdlTools` to access CDL products \citep{chenToolsDownloadWork2018}. We used the 2010 CDL data because this was the first year of high resolution (30 x 30m) CDL data collection that matched our lake nutrient data collection window. Because the CDL contains detailed coverage for dozens of crops, including rare crops with little to no coverage, we re-categorized CDL data based on \citet{larkCroplandExpansionOutpaces2015} to a more limited set of categories (Table S1). 
 
 As a more granular representation of watershed agricultural land use, we measured the proportion of land cover in agricultural and “natural” land-uses in 100-m buffers of lake shorelines and streams for each lake watershed. We chose a 100-m buffer width because this width is inclusive of nearly all “riparian buffers” \citep{mayerMetaAnalysisNitrogenRemoval2007}. Here agricultural land-use is defined in the aggregate sense as the proportion of land used for agriculture in a lake’s watershed whereas “natural” land-uses include the sum of all non-agriculture and non-developed CDL classes. We identified the streams associated with each lake using the stream network extraction tool in the `nhdR` interface \citep{stachelekNhdRToolsWorking2019} to the National Hydrography Network \citep{usgsNationalHydrographyDataset2019}. We compiled soil characteristics for each lake watershed using the Gridded Soil Survey Geographic Database (gSSURGO, \citealt{soil2016gridded}) where we used the python package `gssurgo` \citep{stachelekGssurgoPythonToolbox2019} to access gSSURGO  products. One such product was wetland potential, defined as the percentage of the soil grid that meets the criteria for hydric soils formed under conditions of saturation, flooding, or ponding long enough to develop anaerobic conditions but not so long as to be classified as a permanent waterbody \citep{soil2016gridded}. Finally, we compiled mean annual nutrient inputs via fertilizer and manure to lake watersheds from 1982-2001 using county level data provided by \citet{ruddy2006county}. We spatially aligned these county level estimates to lake watershed polygons provided by LAGOS-NE \citep{LAGOSgis} using the area-weighted interpolation functions provided by the `sf` R package \citep{pebesma2018}. All of our data and data processing code are available at \href{https://doi.org/10.5281/zenodo.3754916}{doi:10.5281/zenodo.3754916}.
 
@@ -190,7 +190,7 @@ We used the default settings of `brms` to generate posterior estimates using fou
 
 ### Effects of agriculture on lake nitrogen and phosphorus
 
-Lake characteristics (e.g., maximum depth and watershed to lake area ratio) along with measures of nutrient transport (e.g., baseflow) and near-stream agriculture were significant predictors in all lake N and P models that we fit. When we  compared among different models for each nutrient individually, we found that those with agricultural watershed land-use (in the aggregate sense) were top-ranked (i.e., had the lowest absolute value leave-one-out cross validation score) for models of both TN and TP concentrations (Figure \ref{fig2, Table \ref{table2}). Although we observed no difference in the specific watershed land-use predictor used in each top-ranked model, we found differences in the extent to which each top-ranked model was substantially different from lower ranked models. For example, in the case of P, all models had nearly identical $R^2$ (0.63) and the difference between the top-ranked model and second ranked model was modest ($\Delta$ELPD = 0.41). For N models, however, agricultural and corn land-use models had higher $R^2$ (0.58) compared to other models and the difference between the top-ranked and second ranked model was more substantial ($\Delta$ELPD = 2.58, Figure \ref{fig2}, Table \ref{table1}).
+Lake characteristics (e.g., maximum depth and watershed to lake area ratio) along with measures of nutrient transport (e.g., baseflow) and near-stream agriculture were significant predictors in all lake N and P models that we fit. When we  compared among different models for each nutrient individually, we found that those with agricultural watershed land-use (in the aggregate sense) were top-ranked (i.e., had the lowest absolute value leave-one-out cross validation score) for models of both TN and TP concentrations (Figure \ref{fig2, Table \ref{table2}). Although we observed no difference in the specific watershed land-use predictor used in each top-ranked model, we found differences in the extent to which each top-ranked model was substantially different from lower ranked models. For example, in the case of P, all models had nearly identical $R^2$ (0.63) and the difference between the top-ranked model and second ranked model was modest ($\Delta$ELPD = 0.41). For N models, however, agricultural and corn land-use models had higher $R^2$ (0.58) compared to other models and the difference between the top-ranked and second ranked model was more substantial ($\Delta$ELPD = 2.58, Figure \ref{fig2}, Table \ref{table2}).
 
 \begin{figure}
   \begin{center}
@@ -224,7 +224,7 @@ No predictors in the nutrient input category appeared to be strongly related to 
 
 ### Regional variation in agriculture sensitivity
 
-Both TN and TP concentrations were sensitive to measures of watershed land-use as well as near-stream agriculture (Figure \ref{fig2}, Table \ref{table1}). Despite these similarities, we found differences in both the magnitude of these effects and the extent to which we observed regional variation in watershed land-use sensitivity for N and P models (Figure \ref{fig4}). For P, there was little evidence that sensitivity to watershed land-use was regionally variable. More specifically, the credible intervals for the slope of each individual region overlapped the global slope estimate (Figure \ref{fig4}). In contrast, for N we found evidence for regional variation in sensitivity to watershed land-use. For this nutrient, the credible intervals for 2 of the 37 regions did not overlap the global estimate (Figure \ref{fig4}). These regions were found in parts of Iowa, Minnesota, and Illinois and appear to be more sensitive to watershed land-use – i.e., lake N increases at a faster rate per unit increase in agricultural land-use compared to other regions (Figure \ref{fig5}). The median soil clay content of watersheds in these regions was higher than the median across watersheds in all other regions (Figure \ref{fig6}). Furthermore, these two regions had a unique combination of both high soil clay content and extensive tile drainage (Figure S6).
+Both TN and TP concentrations were sensitive to measures of watershed land-use as well as near-stream agriculture (Figure \ref{fig2}, Table \ref{table2}). Despite these similarities, we found differences in both the magnitude of these effects and the extent to which we observed regional variation in watershed land-use sensitivity for N and P models (Figure \ref{fig4}). For P, there was little evidence that sensitivity to watershed land-use was regionally variable. More specifically, the credible intervals for the slope of each individual region overlapped the global slope estimate (Figure \ref{fig4}). In contrast, for N we found evidence for regional variation in sensitivity to watershed land-use. For this nutrient, the credible intervals for 2 of the 37 regions did not overlap the global estimate (Figure \ref{fig4}). These regions were found in parts of Iowa, Minnesota, and Illinois and appear to be more sensitive to watershed land-use – i.e., lake N increases at a faster rate per unit increase in agricultural land-use compared to other regions (Figure \ref{fig5}). The median soil clay content of watersheds in these regions was higher than the median across watersheds in all other regions (Figure \ref{fig6}). Furthermore, these two regions had a unique combination of both high soil clay content and extensive tile drainage (Figure S6).
 
 \begin{figure}
   \begin{center}
