sync zotero library

--- a/manuscript/lagosag.bib
+++ b/manuscript/lagosag.bib
@@ -138,7 +138,7 @@
 }
 
 @techreport{bakerTillagePracticesConterminous2011,
-  title = {Tillage {{Practices}} in the {{Conterminous United States}}, 1989\textendash{}2004\textemdash{{Datasets Aggregated}} by {{Watershed}}},
+  title = {Tillage {{Practices}} in the {{Conterminous United States}}, 1989\textendash 2004\textemdash{{Datasets Aggregated}} by {{Watershed}}},
   author = {Baker},
   year = {2011},
   address = {{USGS}},
@@ -639,7 +639,7 @@
 }
 
 @article{drummondLandChangeVariability2012,
-  title = {Land Change Variability and Human\textendash{}Environment Dynamics in the {{United States Great Plains}}},
+  title = {Land Change Variability and Human\textendash Environment Dynamics in the {{United States Great Plains}}},
   author = {Drummond, Mark A. and Auch, Roger F. and Karstensen, Krista A. and Sayler, Kristi L. and Taylor, Janis L. and Loveland, Thomas R.},
   year = {2012},
   month = jul,
@@ -887,7 +887,6 @@
   urldate = {2018-07-20},
   file = {/home/jose/Zotero/storage/NG2ZKR5L/Gémesi et al. - 2011 - Effects of Watershed Configuration and Composition.pdf},
   journal = {Journal of Environment Quality},
-  keywords = {need to read},
   language = {en},
   number = {2}
 }
@@ -1319,7 +1318,7 @@
 }
 
 @article{LAGOSgis,
-  title = {{{LAGOS}}-{{NE}}-{{GIS}} v1.0: A Module for {{LAGOS}}-{{NE}}, a Multi-Scaled Geospatial and Temporal Database of Lake Ecological Context and Water Quality for Thousands of {{U}}.{{S}}. {{Lakes}}: 1925\textendash{}2013.},
+  title = {{{LAGOS}}-{{NE}}-{{GIS}} v1.0: A Module for {{LAGOS}}-{{NE}}, a Multi-Scaled Geospatial and Temporal Database of Lake Ecological Context and Water Quality for Thousands of {{U}}.{{S}}. {{Lakes}}: 1925\textendash 2013.},
   author = {Soranno, PA and Cheruvelil, KS},
   year = {2017},
   url = {http://doi.org/cxnk},
@@ -1547,7 +1546,7 @@
 @article{mossNitrogenMacrophytesShallow2013,
   title = {Nitrogen, Macrophytes, Shallow Lakes and Nutrient Limitation: Resolution of a Current Controversy?},
   shorttitle = {Nitrogen, Macrophytes, Shallow Lakes and Nutrient Limitation},
-  author = {Moss, Brian and Jeppesen, Erik and S{\o}ndergaard, Martin and Lauridsen, Torben L. and Liu, Zhengwen},
+  author = {Moss, Brian and Jeppesen, Erik and S\o ndergaard, Martin and Lauridsen, Torben L. and Liu, Zhengwen},
   year = {2013},
   month = jun,
   volume = {710},
@@ -1593,8 +1592,8 @@
   author = {Nakagaki, N and Wieczorek, ME},
   year = {2016},
   volume = {10},
-  pages = {F7W37TDP},
-  journal = {USGS Data Release. doi}
+  doi = {10.5066/F7W37TDP},
+  journal = {USGS Data Release}
 }
 
 @article{norvellPhosphorusConnecticutLakes1979,
@@ -1900,7 +1899,7 @@
 }
 
 @article{renwickWaterQualityTrends2008,
-  title = {Water {{Quality Trends}} and {{Changing Agricultural Practices}} in a {{Midwest U}}.{{S}}. {{Watershed}}, 1994\textendash{}2006},
+  title = {Water {{Quality Trends}} and {{Changing Agricultural Practices}} in a {{Midwest U}}.{{S}}. {{Watershed}}, 1994\textendash 2006},
   author = {Renwick, William H. and Vanni, Michael J. and Zhang, Qianyi and Patton, Jon},
   year = {2008},
   volume = {37},
@@ -1975,7 +1974,7 @@
 }
 
 @article{schultePrairieStripsImprove,
-  title = {Prairie Strips Improve Biodiversity and the Delivery of Multiple Ecosystem Services from Corn\textendash{}Soybean Croplands},
+  title = {Prairie Strips Improve Biodiversity and the Delivery of Multiple Ecosystem Services from Corn\textendash Soybean Croplands},
   author = {Schulte, Lisa A and Niemi, Jarad and Helmers, Matthew J and Liebman, Matt and Arbuckle, J Gordon and James, David E and Kolka, Randall K and Neal, Jeri and Ryswyk, Gary Van and Witte, Chris},
   pages = {7},
   file = {/home/jose/Zotero/storage/SNQNB8PW/Schulte et al. - Prairie strips improve biodiversity and the delive.pdf},
@@ -2001,7 +2000,7 @@
 
 @article{sondergaardPersistentInternalPhosphorus2013,
   title = {Persistent Internal Phosphorus Loading during Summer in Shallow Eutrophic Lakes},
-  author = {S{\o}ndergaard, Martin and Bjerring, Rikke and Jeppesen, Erik},
+  author = {S\o ndergaard, Martin and Bjerring, Rikke and Jeppesen, Erik},
   year = {2013},
   month = jun,
   volume = {710},
@@ -2018,7 +2017,7 @@
 }
 
 @article{soranno2017lagos,
-  title = {{{LAGOS}}-{{NE}}-{{LIMNO}} v1.087.1: {{A}} Module for {{LAGOS}}-{{NE}}, a Multi-Scaled Geospatial and Temporal Database of Lake Ecological Context and Water Quality for Thousands of {{US Lakes}}: 1925\textendash{}2013},
+  title = {{{LAGOS}}-{{NE}}-{{LIMNO}} v1.087.1: {{A}} Module for {{LAGOS}}-{{NE}}, a Multi-Scaled Geospatial and Temporal Database of Lake Ecological Context and Water Quality for Thousands of {{US Lakes}}: 1925\textendash 2013},
   author = {Soranno, PA and Cheruvelil, K},
   year = {2017},
   volume = {10},
@@ -2027,7 +2026,7 @@
 }
 
 @article{sorannoCrossscaleInteractionsQuantifying2014,
-  title = {Cross-Scale Interactions: Quantifying Multi-Scaled Cause\textendash{}Effect Relationships in Macrosystems},
+  title = {Cross-Scale Interactions: Quantifying Multi-Scaled Cause\textendash Effect Relationships in Macrosystems},
   shorttitle = {Cross-Scale Interactions},
   author = {Soranno, Patricia A and Cheruvelil, Kendra S and Bissell, Edward G and Bremigan, Mary T and Downing, John A and Fergus, Carol E and Filstrup, Christopher T and Henry, Emily N and Lottig, Noah R and Stanley, Emily H and Stow, Craig A and Tan, Pang-Ning and Wagner, Tyler and Webster, Katherine E},
   year = {2014},
@@ -2135,8 +2134,7 @@
   title = {Gssurgo: {{Python}} Toolbox Enabling an Open Source {{gSSURGO}} Workflow},
   author = {Stachelek, Joseph},
   year = {2019},
-  url = {https://github.com/jsta/gssurgo},
-  note = {Python toolbox version 1.0.0}
+  url = {https://github.com/jsta/gssurgo}
 }
 
 @book{stachelekNhdRToolsWorking2019,
@@ -2237,7 +2235,10 @@
 @techreport{usgsNationalHydrographyDataset2019,
   title = {National Hydrography {{Dataset}}},
   author = {USGS},
-  year = {2019}
+  year = {2019},
+  url = {https://nhd.usgs.gov/},
+  urldate = {2018-04-30},
+  keywords = {tocite}
 }
 
 @article{vanderhorstAssessingEfficiencyGains2007,
