--- a/manuscript/lagosag.bib
+++ b/manuscript/lagosag.bib
@@ -493,7 +493,7 @@
 @article{cobournConceptPracticePolicy2018,
   title = {From Concept to Practice to Policy: Modeling Coupled Natural and Human Systems in Lake Catchments},
   shorttitle = {From Concept to Practice to Policy},
-  author = {Cobourn, Kelly M. and Carey, Cayelan C. and Boyle, Kevin J. and Duffy, Christopher and Dugan, Hilary A. and Farrell, Kaitlin J. and Fitchett, Leah and Hanson, Paul C. and Hart, Julia A. and Henson, Virginia Reilly and Hetherington, Amy L. and Kemanian, Armen R. and Rudstam, Lars G. and Shu, Lele and Soranno, Patricia A. and Sorice, Michael G. and Stachelek, Joseph and Ward, Nicole K. and Weathers, Kathleen C. and Weng, Weizhe and Zhang, Yu},
+  author = {Cobourn, Kelly M. and Carey, Cayelan C. and Boyle, Kevin J. and Duffy, Christopher and Dugan, Hilary A. and Farrell, Kaitlin J. and Fitchett, Leah and Hanson, Paul C. and Hart, Julia A. and Henson, Virginia Reilly and Hetherington, Amy L. and Kemanian, Armen R. and Rudstam, Lars G. and Shu, Lele and Soranno, Patricia A. and Sorice, Michael G. and Stachelek, Jemma and Ward, Nicole K. and Weathers, Kathleen C. and Weng, Weizhe and Zhang, Yu},
   year = {2018},
   month = may,
   volume = {9},
@@ -1821,7 +1821,7 @@
 
 @article{qianImplicationsSimpsonParadox2019,
   title = {The Implications of {{Simpson}}'s Paradox for Cross-Scale Inference among Lakes},
-  author = {Qian, Song S. and Stow, Craig A. and Nojavan A., Farnaz and Stachelek, Joseph and Cha, Yoonkyung and Alameddine, Ibrahim and Soranno, Patricia},
+  author = {Qian, Song S. and Stow, Craig A. and Nojavan A., Farnaz and Stachelek, Jemma and Cha, Yoonkyung and Alameddine, Ibrahim and Soranno, Patricia},
   year = {2019},
   month = oct,
   volume = {163},
@@ -2123,7 +2123,7 @@
 
 @article{stachelek_2019,
   title = {Does Freshwater Connectivity Influence Phosphorus Retention in Lakes?},
-  author = {Stachelek, Joseph and Soranno, Patricia A},
+  author = {Stachelek, Jemma and Soranno, Patricia A},
   year = {2019},
   doi = {10.1002/lno.11137},
   file = {/home/jose/Zotero/storage/AHR2TWGL/Stachele and Soranno - 2019 - Does freshwater connectivity influence phosphorus .pdf;/home/jose/Zotero/storage/QBFWXCBN/lno.11137.pdf},
@@ -2132,14 +2132,14 @@
 
 @book{stachelekGssurgoPythonToolbox2019,
   title = {Gssurgo: {{Python}} Toolbox Enabling an Open Source {{gSSURGO}} Workflow},
-  author = {Stachelek, Joseph},
+  author = {Stachelek, Jemma},
   year = {2019},
   url = {https://github.com/jsta/gssurgo}
 }
 
 @book{stachelekNhdRToolsWorking2019,
   title = {{{nhdR}}: Tools for Working with the National Hydrography Dataset},
-  author = {Stachelek, Joseph},
+  author = {Stachelek, Jemma},
   year = {2019},
   url = {https://github.com/jsta/nhdR}
 }
